<resources>
    <string name="app_name">EventsApp</string>
    <string name="texto">Texto</string>
    <string name="enviar">Enviar</string>
    <string name="tamanho">Tamanho da letra</string>
    <string name="estilo">Estilo</string>
    <string name="negrito">Negrito</string>
    <string name="italico">Itálico</string>
    <string name="maiuscula">Maiúsculas</string>
    <string name="texto4">Cor da letra</string>
    <string name="vermelho">Vermelho</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
</resources>